--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
             <li class="nav-item">
               <a class="nav-link" href="/write">Write</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/login">login</a>
+            </li>
           </ul>
         </div>
       </div>
