change Stream을 이용한 실시간 채팅기능

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
             <li class="nav-item">
               <a class="nav-link" href="/login">login</a>
             </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/chat">chat</a>
+            </li>
           </ul>
         </div>
       </div>
