--- a/forum/index.html
+++ b/forum/index.html
@@ -9,15 +9,15 @@
 </head>
 <body>
 
-    <div class="nav">
-        <a class="logo">AppleForum</a>
-        <a>Page1</a>
-        <a>Page2</a>
+    <div class="form-box"> 
+        <h4>한상결의 게시판</h4>
+        <a href="/list">
+            <button style="cursor: pointer;">
+                바로가기
+            </button>
+        </a>
+        
     </div>
-
-    <h4>안녕</h4>
-    <p>반가워</p>
-    <button type="button" class="btn btn-primary">Primary</button>
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
