search index 검색기능 구현, 댓글기능 구현

--- a/forum/index.html
+++ b/forum/index.html
@@ -11,7 +11,7 @@
 
     <div class="form-box"> 
         <h4>한상결의 게시판</h4>
-        <a href="/list">
+        <a href="/list/1">
             <button style="cursor: pointer;">
                 바로가기
             </button>
